syntax = "proto3";

package myncer;

option go_package = "github.com/hansbala/myncer/backend/proto;myncer_pb";

message User {
  // google/uuid generated UUID.
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
}

message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string plaintext_password = 4;
}

message CreateUserResponse {
  string generated_id = 1;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}
