syntax = "proto3";

package myncer;

import "google/protobuf/timestamp.proto";
import "myncer/datasource.proto";

option go_package = "github.com/hansbala/myncer/server/proto;myncer_pb";

// Represents an OAuth token issued by a datasource.
message OAuthToken {
  // google/uuid generated UUID.
  string id = 1;
  // Myncer user id.
  string user_id = 2;

  string access_token = 3;
  string refresh_token = 4;
  string token_type = 5;

  google.protobuf.Timestamp expires_at = 7;
  myncer.Datasource datasource = 8;

  // Metadata which is fetched from SQL (for it's ACID compliance).
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;

  reserved 6;
}
